Fixes problem with editing wrong template entry, print css not showing up in production, and certain images not showing up in production

--- a/app/assets/stylesheets/print.css.scss
+++ b/app/assets/stylesheets/print.css.scss
@@ -1,6 +1,7 @@
 /*
 */
 
+@media print {
 body {
     padding-top: 0;
     padding-bottom: 0;
@@ -105,4 +106,5 @@ body {
 
 .footer {
   display: none;
+}
 }
